human_written_tests/WebAssembly/processed_control_flow_validation/test_unreachable_103.wast
(assert_invalid
  (module (func $type-loop-value-nested-unreachable-num-vs-void
    (loop (i32.const 3) (block (unreachable)))
  ))
  "type mismatch"
)